add db select
