# api/dashboard_data_handler.go
@@ -11,7 +11,31 @@ import (
 func InitDashboardDataRoute(r chi.Router) {
 	r.Post(common.BASE_CONTEXT+"/dashboard-data/metric", dashboardMetricHandler)
 	r.Post(common.BASE_CONTEXT+"/dashboard-data/metric-range", dashboardMetricRangeHandler)
+	r.Post(common.BASE_CONTEXT+"/dashboard-data/db", dashboardDbHandler)
 
+}
+
+// @Summary DB
+// @Description 从DB中获取数据
+// @Tags DashboardData
+// @Produce  json
+// @Param reqs body entity.QueryDbReq true "请求参数"
+// @Success 200 {object} common.Response{data=[]map[string]any} "objects array"
+// @Failure 500 {object} common.Response ""
+// @Router /dashboard-data/db [post]
+func dashboardDbHandler(w http.ResponseWriter, r *http.Request) {
+	req := &entity.QueryDbReq{}
+	err := common.ReadRequestBody(r, req)
+	if err != nil {
+		common.HttpResult(w, common.ErrParam.AppendMsg(err.Error()))
+		return
+	}
+	data, err := service.FetchDatabase(r.Context(), req)
+	if err != nil {
+		common.HttpResult(w, common.ErrService.AppendMsg(err.Error()))
+		return
+	}
+	common.HttpSuccess(w, common.OK.WithData(data))
 }
 
 // @Summary Metric
